apps/todo/todo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
