apps/todo/todo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: todo
  name: todo
  namespace: todo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    link.argocd.argoproj.io/external-link: "http://todo-todo.apps-crc.testing/todo.html"
spec:
  host: todo-todo.apps-crc.testing
  port:
    targetPort: 8080
  to:
    kind: Service
    name: todo-gitops
    weight: 100
